个人资料编辑页

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -12,7 +12,6 @@
         android:id="@+id/releaseToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,7 +48,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/cancel"
                 app:layout_constraintStart_toEndOf="@+id/draft"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
+                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck"
+                />
 
             <ImageView
                 android:id="@+id/cancel"
