--- a/app/src/main/res/layout/modify_personal_info.xml
+++ b/app/src/main/res/layout/modify_personal_info.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".PersonalInfoModify"
+    android:background="@color/white"
+    >
+
     <Toolbar
         android:id="@+id/modify_tool_bar"
         android:layout_width="match_parent"
@@ -13,11 +17,12 @@
         >
 
         <ImageView
+            android:id="@+id/cancelEditing"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/back"
             android:layout_marginStart="10dp"
-            />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,6 +32,16 @@
             android:text="@string/editInfo"
             android:textColor="#5f5f5f"
             android:textSize="25sp"
+            />
+
+        <Button
+            android:id="@+id/save_change"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@string/save"
+            android:layout_gravity="right"
+
             />
     </Toolbar>
 
@@ -42,6 +57,150 @@
         android:clickable="true"
         />
 
+    <LinearLayout
+        android:id="@+id/modify_username"
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/clickToChange"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:text="@string/user_name"
+            android:textColor="@color/gray"
+            android:textSize="20sp"
+            />
 
+        <TextView
+            android:id="@+id/tv_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="Umbrella"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            />
+        <ImageButton
+            android:id="@+id/btn_user"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:backgroundTint="@color/white"
+            android:scaleType="centerInside"
+            android:src="@drawable/in"/>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/im1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/modify_username"
+        />
+
+    <LinearLayout
+        android:id="@+id/modify_sex"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/im1"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:text="性别"
+            android:textColor="@color/gray"
+            android:textSize="20dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_sex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="男"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            />
+
+        <ImageButton
+            android:id="@+id/btn_sex"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:backgroundTint="@color/white"
+            android:scaleType="centerInside"
+            android:src="@drawable/in"/>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/im2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/modify_sex"
+        />
+
+    <LinearLayout
+        android:id="@+id/modify_sign"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/im2"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:text="个人介绍"
+            android:textColor="@color/gray"
+            android:textSize="20dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_sign"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="这个人很懒，什么都没留下。"
+            android:textColor="@color/black"
+            android:textSize="14dp"
+            />
+
+        <ImageButton
+            android:id="@+id/btn_sign"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:backgroundTint="@color/white"
+            android:scaleType="centerInside"
+            android:src="@drawable/in"/>
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/modify_sign"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
