--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>`
+<resources>
     <color name="currentTheme">#78A2B9</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -7,6 +7,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="lightBlue">#96f6e8</color>
+    <color name="palegray">#d1d1d1</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="ivory">#fffff0</color><!--象牙色 -->
@@ -153,4 +154,7 @@
     <color name="navy">#000080</color><!--海军色 -->
     <color name="color_f6">#f6f6f6</color>
     <color name="lightlyDarkWhite">#f0f0f5</color>
+    <color name="gray9">#171717</color>
+    <color name="gray3">#afafaf</color>
+    <color name="white3">#f8f8f8</color>
 </resources>
